--- a/css/index.css
+++ b/css/index.css
@@ -5,8 +5,12 @@
     outline: none;
 }
 
-html {
-    scroll-behavior: smooth;
+.current {
+    color: white;
+}
+
+.current:hover {
+    text-decoration: underline #b10101;
 }
 
 .secNavBar {
@@ -49,7 +53,6 @@ html {
     text-decoration: underline #b10101;
     transform: scale(1.1);
     transition: 1s;
-
 }
 
 .divLogin {
@@ -60,7 +63,6 @@ html {
     align-items: center;
     justify-content: center;
     color: #b10101;
-
 }
 
 .pLogin {
@@ -80,14 +82,13 @@ html {
 
 .secVideo video {
     width: 100%;
-
 }
 
 .tituloVideo {
     display: flex;
     position: absolute;
     color: white;
-    top: 70%;
+    top: 60%;
     left: 10%;
     font-family: 'Krona One', sans-serif;
 }
@@ -124,7 +125,6 @@ html {
     flex-direction: column;
     justify-content: space-evenly;
     text-align: center;
-
 }
 
 .divHistoria p {
@@ -132,7 +132,6 @@ html {
     color: white;
     font-family: 'Krona One', sans-serif;
 }
-
 
 .conteudoHistoria p {
     font-size: 1.3rem;
@@ -160,15 +159,21 @@ html {
 
 .secHabilidades {
     width: 100%;
-    height: 50vh;
+    height: 55vh;
     display: flex;
     justify-content: center;
+    background: url("../IMGS/dz.jpg");
+    background-size: cover;
+    background-position: center;
+    color: white;
+    font-weight: bold;
 }
 
 .divHabilidades {
     width: 80%;
     height: 50vh;
     display: flex;
+    align-items: center;
 }
 
 .habilidadesTitulo {
@@ -180,35 +185,45 @@ html {
 }
 
 .pHabilidade {
-    margin-top: 3%;
+    margin-top: 20%;
     font-size: 2rem;
     font-family: 'Krona One', sans-serif;
-    border-bottom: 2px solid #b10101;
-
+    border-bottom: 2px solid purple;
 }
 
 .descHabilidade {
     margin: auto 0;
     font-size: 1.3rem;
     text-align: left;
-
 }
 
-.descHabilidadeQ{
+.descHabilidadeQ {
     margin: auto 0;
     font-size: 1.3rem;
     text-align: left;
     display: none;
-
 }
-.descHabilidadeW{
+
+.descHabilidadeW {
     margin: auto 0;
     font-size: 1.3rem;
     text-align: left;
     display: none;
-
 }
 
+.descHabilidadeE {
+    margin: auto 0;
+    font-size: 1.3rem;
+    text-align: left;
+    display: none;
+}
+
+.descHabilidadeR {
+    margin: auto 0;
+    font-size: 1.3rem;
+    text-align: left;
+    display: none;
+}
 
 .iconesHabilidades {
     width: 10%;
@@ -216,6 +231,7 @@ html {
 }
 
 .habilidades {
+    margin-top: 15px;
     width: 100%;
     height: 50vh;
     display: flex;
@@ -258,10 +274,10 @@ html {
     width: 60%;
 }
 
-.habVideo video{
+.habVideo video {
     width: 100%;
-    height: 470px;
-    margin-top: 7px;
+    height: 490px;
+    margin-top: 5%;
 }
 
 .P {
